css/tabs.css
html{
    height:100%;
    overflow: hidden;
}

body{ 
    height:100%;
    overflow: hidden;
    margin:0; 
    padding:0; 
    font-size: xx-large;
}

.tab-app {
    height: 100%;
    width: 100%;
    margin-top: 0.2vh;
}

.tab-navigator{
    display: block;
    width: 100%;
    margin-left: 3px;
}

.tab-close-button{
    margin-left: 10px;
}

.nav > li > a {
    padding: 3px 5px;
}

.hidden{
    display: none;
}

.tab-container {
    display: inline-block;
    height: calc(100% - 35px);
    width: 100%;
}

.tab-content {
    display: inline-block;
    height: 100%;
    width: 100%;
}

.form-group{
    margin-bottom: 1px;
}

.tab-toolbar{
    display: block;
    margin-top: 3px;
    margin-left: 3px;
    margin-right: 3px;
    margin-bottom: 3px;
}

.btn{
    font-size: inherit;
}

.input-connstr{
    padding: 3px 12px;
    font-size: inherit;
    height: inherit;
}

.tab-split {
    display: inline-block;
    height: 100%;
    width: 100%;
}

.tab-split-container{
    display: inline-block; 
}

.hsplitter {
    cursor: ns-resize;
    height: 3px;
    width: 100;
}

.vsplitter {
    display: inline-block; 
    cursor: ew-resize;
    width: 3px;
    height: 100%;
}

.tab-editor {
    height: 50vh;
    width: 100%;
    overflow: scroll;
    border:1px solid;
}

.output-console {
    display: block;
    height: 100%;
    width: 100%;
    overflow: auto;
    padding-bottom: 40px;
    padding-top: 5px;
}

.ace_editor{
    width: 100%;
    height: 100%;
    font-size: inherit !important;
}

.connection-error{
    font-family: monospace;
    white-space: pre-line;
}

.query-error{
    font-family: monospace;
    white-space: pre;
}

.table-resultset {
    width: auto;
}

.table-resultset td {
  white-space: pre;
}

.duration-div {
    margin-left: 10px;
    margin-right: 20px;
}

.duration-table{
    width: 100%;
    text-align: right;
}

.duration-table tr td:first-child{
    text-align: left;
}

.rows-count-div{
    margin-left: 10px;
}

.conn_history{
    position: absolute;
    width: 75vw;
    z-index: 1000;
    border-radius: 5px;
}

.conn_history_list{
    list-style-type: none;
    padding-left: 0px;
}

.conn_history_hidden{
    display: none;
}

.conn_history_item{
    cursor: pointer;    
    padding-left: 10px;
}

.conn_item_alias{
    font-weight: bold;
}

.c3-legend-item{
    font-size: inherit;
}

.c3 svg {
    font-size: inherit;
}

.search-box{
    position: fixed;
    bottom: 0;
    right: 0;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 5px;
    width: 50%;
}

.alert{
    margin-left: 10px;
    margin-right: 10px;
}

.about-logo{
    width: 50px;
}

.about-table{
    width: 100%;
}

.about-table tr td:first-child{
    width: 70px;
}

.progress{
    width: 100%;
}

.object-info-div{
    margin-left: 20px;
    margin-bottom: 10px;
}

.object-info-name{
    font-weight: bold;
}

.object-info-columns-table td{
    padding-left: 10px;
    padding-right: 30px;
}

.object-info-columns-table th{
    padding-left: 10px;
    padding-right: 30px;
    padding-bottom: 10px;
    padding-top: 10px;
}

.history-view{
    margin-top: 10px;
}

.history-header{
    width: 100%;
}

.history-header td{
    text-align: center;
}

.history-header tr td:first-child{
    text-align: left;
}

.history-header tr td:last-child{
    width: 80px;
    padding-left: 20px;

}

.history-filter{
    width: 100%;
    font-weight: bold;
    font-size: inherit;
    min-height: inherit;
}

.markdown-block{
    padding-left: 10px;
}

.cloud-error{
    word-break: break-all;
}

.schema-nav{
    padding-top: 10px;
}

